app/static/css/room_styles.css
/* HTML TAG SELECTORS */
html,
body {
  height: 100%;
}

body {
  background: rgb(46, 184, 114);
  background: linear-gradient(
    204deg,
    rgba(46, 184, 114, 1) 0%,
    rgba(163, 222, 131, 1) 74%,
    rgba(136, 48, 78, 1) 74%,
    rgba(250, 70, 89, 1) 75%,
    rgba(250, 70, 89, 1) 100%
  );
  font-family: "Ubuntu", sans-serif;
  width: 100%;
  display: flex;
  align-items: stretch;
}

ul,
li {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li {
  background-color: rgb(201, 214, 223, 0.4);
  border-radius: 0.5rem;
  box-sizing: b;
  width: 100%;
  padding: 2px;
  margin-top: 2px;
}

/* Container Elements */
.container-flex {
  background-color: #feffe4;
  margin: 3%;
  padding: 5px;
}

.gameArea {
  flex: 4;
  /* height: 600px; */
  display: flex;
  align-items: flex-start;
}

.chat {
  /* flex: 1.5; */
  width: 20%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.players {
  /* flex: 1; */
  width: 15%;
  height: 60%;
  text-align: center;
  font-size: 1.25rem;
  overflow: hidden;
}

/* Game Board Elements */
#gameBoard {
  text-align: center;
  position: flex;
  flex-direction: column;
}
#showPlayers {
  order: 1;
  display: none;
}

#startGame {
  margin: auto;
  order: 2;
}

#showChat {
  order: 3;
  display: none;
}

.player-circle {
  position: relative;
  height: 50%;
}

.player-circle span {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.redPlayer {
  color: red;
}

.bluePlayer {
  color: blue;
}

/* Chat */

.chat-messages {
  flex: 1;
  overflow: auto;
}

.chat-input {
  display: flex;
  align-items: right;
}

.chat-text {
  flex-grow: 1;
}

#messageList > li {
  padding: 5px;
}

/* POPUP Elements */
#getWords {
  margin: auto;
}

.player-img {
  height: 5rem;
}

.pop-up {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
  padding: 7%;
  text-align: center;
}

.hidden {
  display: none;
}

@media (max-width: 1200px) {
  #showPlayers {
    display: inline;
  }

  #showChat {
    display: inline;
  }

  .chat {
    width: 0;
    margin: 3% 0;
    padding: 0;
  }

  .players {
    width: 0;
    margin: 3% 0;
    padding: 0;
  }
}

